[package]
name = "cairo-language-common"
description = "Common Cairo compiler utils."
version = "2.17.0-rc.0"
edition = "2024"
repository = "https://github.com/software-mansion/cairo-language-common"
license = "Apache-2.0"

[dependencies]
cairo-lang-defs = "2.17.0-rc.0"
cairo-lang-diagnostics = "2.17.0-rc.0"
cairo-lang-filesystem = "2.17.0-rc.0"
cairo-lang-parser = "2.17.0-rc.0"
cairo-lang-semantic = "2.17.0-rc.0"
cairo-lang-syntax = "2.17.0-rc.0"
cairo-lang-utils = "2.17.0-rc.0"
salsa = "0.26.0"
semver = "1"
tracing = "0.1"
